fix overflow issue and responsiveness

--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -6,6 +6,6 @@
   width: 100%;
   padding: rem(12);
   border: 2px solid $medGray;
-  border-radius: rem(10);
+  border-radius: rem(14);
   cursor: pointer;
 }
