--- a/app/scss/globals/_layout.scss
+++ b/app/scss/globals/_layout.scss
@@ -9,6 +9,7 @@ body {
   background-color: $almostWhite;
   position: relative;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 .bg-overlay {
