--- a/app/scss/globals/_typography.scss
+++ b/app/scss/globals/_typography.scss
@@ -7,13 +7,14 @@ h2,
 h3 {
   font-weight: 700;
   line-height: 1.1;
-  margin-top: 0;
+  margin: 0;
   color: $medGray;
 }
 
 p {
-  margin-top: 0;
+  margin: 0;
   color: $medGray;
+  line-height: rem(29);
 }
 
 ul {
